Added JQuery DatePicker at date input control.

--- a/AdvMasterDetails/Views/Home/Index.cshtml
+++ b/AdvMasterDetails/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
 @*<script src="~/Scripts/myScripts.js"></script>*@
 
 <script type="text/javascript">
-    $(function () {
+    $(document).ready(function() {
         $("#orderDate").datepicker({
             dateFormat: 'mm-dd-yy'
         });
